frontend/test/should_pass/edge_008.grg
rule r {
	x:Node;
	y:Node;
	x -e:Edge-> y;
	x -f:UEdge- y;

	replace {
		x;
		y;
		x -e-> y;
		x -f- y;
	}
}
