frontend/test/should_fail/dangle_003.grg
rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		x-e->;
	}
}
